traccar/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traccar
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: traccar
  template:
    metadata:
      labels:
        app: traccar
        app.kubernetes.io/version: v1
    spec:
      hostname: traccar
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: traccar
          image: traccar/traccar:latest
          ports:
            - name: web
              containerPort: 8082
              protocol: TCP
          volumeMounts:
            - name: traccar-logs
              mountPath: /opt/traccar/logs
            - name: traccar-data
              mountPath: /opt/traccar/data
      volumes:
        - name: traccar-logs
          persistentVolumeClaim:
            claimName: traccar-logs-pvc
        - name: traccar-data
          persistentVolumeClaim:
            claimName: traccar-data-pvc
