traccar/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traccar-service
  labels:
    app.kubernetes.io/name: traccar-service
    app.kubernetes.io/part-of: traccar
spec:
  selector:
    app: traccar
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8082
