traccar/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: traccar
spec:
  hosts:
    - "traccar.lth.so"
  gateways:
    - istio-ingress/public-gateway
  http:
    - route:
        - destination:
            host: traccar-service.traccar.svc.cluster.local
            port:
              number: 80
